# buttre

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LINUX_README.md  MACOS_README.md  QUICK-START.md  README.md  TSF-TESTING-GUIDE.md  TSF_REGISTRATION_GUIDE.md  deny.toml
.cargo/: audit.toml
.github/: CICD.md  FUNDING.yml
crates/buttre-core/: Cargo.toml
crates/buttre-core/configs/: telex.toml  vni.toml
crates/buttre-core/examples/: gen_golden.rs  test_nom_candidates.rs  test_nom_dict.rs  test_nom_keyboard.rs  test_nom_path.rs
crates/buttre-core/src/: core.rs  lib.rs
crates/buttre-core/src/events/: bus.rs  mod.rs  types.rs
crates/buttre-core/src/hotkey/: error.rs  manager.rs  mod.rs
crates/buttre-core/src/keyboard/: builder.rs  config.rs  engine.rs  keyboard.rs  mod.rs  vni_debug_test.rs
crates/buttre-core/src/keyboard/nom/: mod.rs  schema.sql  special.rs  transforms.rs
crates/buttre-core/src/keyboard/telex/: mod.rs  special.rs  tones.rs  transforms.rs  vowel_sequences.rs
crates/buttre-core/src/keyboard/vni/: mod.rs  special.rs  tones.rs  transforms.rs  vowel_sequences.rs
crates/buttre-core/src/services/: config_service.rs  hotkey_service.rs  keyboard_service.rs  method_registry.rs  mod.rs  settings_service.rs
crates/buttre-core/src/state/: app_state.rs  learning.rs  mod.rs  observer.rs  settings.rs
crates/buttre-core/src/state/observers/: mod.rs
crates/buttre-core/src/vietnamese/: mod.rs
crates/buttre-core/tests/: compose_generality.rs  compose_isolation.rs  core_tests.rs  debug_find_vowel.rs  debug_keyboard.rs  event_bus_tests.rs  event_types_tests.rs  golden_regression.rs  hotkey_tests.rs  keyboard_builder_tests.rs  keyboard_config_tests.rs  keyboard_nom_tests.rs  keyboard_telex_tests.rs  keyboard_tests.rs  keyboard_vni_tests.rs  service_config_tests.rs  service_hotkey_tests.rs  service_keyboard_tests.rs  service_method_registry_tests.rs  service_settings_tests.rs  state_tests.rs  test_tone_placement.rs
crates/buttre-core/tests/golden/: mod.rs  nom.snap  telex.snap  vni.snap
crates/buttre-core/tests/golden/corpus_data/: char_tables.rs  mod.rs  syllable_list.rs
crates/buttre-engine/: Cargo.toml  OBSERVABILITY.md
crates/buttre-engine/benches/: compose_bench.rs  end_to_end_vni.rs  hashmap_vs_match.rs  pgo_workload.txt
crates/buttre-engine/data/: attested-syllables.txt
crates/buttre-engine/examples/: gen_attested_syllables.rs  pgo_workload.rs  test_vni.rs  tracing_demo.rs
crates/buttre-engine/src/: buffer.rs  lib.rs  types.rs
crates/buttre-engine/src/compose/: assemble.rs  fallback.rs  mod.rs  segment.rs  tests.rs  transform.rs
crates/buttre-engine/src/pipeline/: attested_data.rs  config.rs  context.rs  dictionary.rs  executor.rs  mod.rs  nom_dictionary.rs  permutation.rs  presets.rs  rules.rs  stage.rs  validation.rs
crates/buttre-engine/src/pipeline/stages/: compose_stage.rs  integration_tests.rs  mod.rs  stage10_learning.rs  stage11_lookup.rs  stage12_output.rs  stage1_normalization.rs  stage2_gatekeeper.rs  stage3_validation.rs  stage9_orthography.rs  telex_table.rs  vni_optimized.rs
crates/buttre-engine/src/tone/: mod.rs  placement.rs  tables.rs
crates/buttre-engine/src/unicode/: mod.rs  normalization.rs  vowel_sequences.rs
crates/buttre-engine/src/vowel/: cluster.rs  mod.rs  positioning.rs  sequences.rs
crates/buttre-engine/tests/: attested_lookup_tests.rs  attested_repro_test.rs  buffer_tests.rs  cham_double_key_test.rs  executor_tests.rs  flexible_typing_test.rs  minimal_test.rs  pipeline_permutation_tests.rs  pipeline_validation_tests.rs  purity_audit.rs  simple_undo_test.rs  stage10_learning_tests.rs  stage11_lookup_tests.rs  stage12_output_tests.rs  stage1_normalization_tests.rs  stage2_gatekeeper_tests.rs  stage3_validation_tests.rs  stage9_orthography_tests.rs  test_as_tone.rs  test_ddaaad.rs  test_find_vowel.rs  test_tone_bugs.rs  test_tone_optimization.rs  test_tone_positioning.rs  test_tone_positioning_fixes.rs  test_undo_aaa.rs  test_uow_edge_case.rs  test_uppercase.rs  test_ux_optimization.rs  test_viet.rs  test_vni_uow.rs  types_tests.rs  undo_functionality.rs  unicode_normalization_tests.rs  unicode_vowel_sequences_tests.rs  vni_comprehensive_test.rs  vni_edge_cases.rs  vni_tone_undo.rs  vni_transformation_undo.rs  vowel_cluster_tests.rs  (+2 more)
crates/buttre-engine/tests/attested_gen/: mod.rs
crates/buttre-platform/: Cargo.toml  README.md  build.rs  buttre-app.rc  buttre-platform-icon.rc  buttre_platform.def
crates/buttre-platform/examples/: keyboard_integration.rs
crates/buttre-platform/src/: lib.rs  main.rs
crates/buttre-platform/src/shared/: config_watcher.rs  engine_bridge.rs  keyboard_manager.rs  mod.rs  pipe_server.rs
crates/buttre-platform/src/shared/input/: keyboard_manager.rs  method_registry.rs  mod.rs
crates/buttre-platform/src/shared/observers/: keyboard_observer.rs  mod.rs  ui_callback.rs  ui_observer.rs
crates/buttre-platform/src/shared/ui/: help_dialog.rs  helpers.rs  icons.rs  menu.rs  mod.rs  tray.rs
crates/buttre-platform/tests/: platform_lib_tests.rs  platform_linux_tests.rs  platform_macos_tests.rs  platform_windows_common_tests.rs  platform_windows_tsf_tests.rs  shared_config_watcher_tests.rs  shared_engine_bridge_tests.rs  shared_method_registry_tests.rs  shared_ui_observer_tests.rs
crates/buttre-test/: Cargo.toml
crates/buttre-test/data/: telex-fallback.txt  telex.txt  vni-fallback.txt  vni.txt
crates/buttre-test/src/: main.rs
docs/: 00-context.md  01-architecture.md  01-arrchitecture.md  02-coding-guide.md  FFI_SAFETY_GUIDE.md  MANUAL_TESTING_GUIDE.md  PIPELINE_ARCHITECTURE.md  README.md  ROADMAP.md  VIETNAMESE_ACCENT.md  benchmark_report.md  project-changelog.md
fonts/: README.md
include/: buttre_platform.h
keyboards/: cham.toml  cham_akhar_thrah.toml  hmong.toml  khmer.toml  muong_tay_nung.toml  taynguyen.toml  thai.toml
scripts/: analyze_mdb_export.py  analyze_telex.py  benchmark_nom.py  benchmark_reference.py  lint.ps1  (+33 more)
tools/bench-compare/: Cargo.toml
tools/bench-compare/src/: main.rs
(+16 files in other folders)
