[package]
name = "buttre-core"
version = "0.7.6-beta"
edition = "2021"
license = "GPL-3.0-only"
description = "Core processing engine, state management, and language methods for Buttre"
authors = ["Buttre Contributors"]
# Internal workspace crate — never published to crates.io. Also lets
# cargo-deny's [licenses.private] exempt this GPL-3.0-only crate from the
# third-party license allow-list check (see root deny.toml).
publish = false

[lints]
workspace = true

[dependencies]
# Dependencies from original buttre-core and buttre-engine
buttre-engine = { path = "../buttre-engine" }
thiserror = { workspace = true }
anyhow = { workspace = true }
unicode-normalization = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
log = { workspace = true }
lazy_static = { workspace = true }
tracing = { workspace = true }

# Dependencies from merged crates
# Dependencies from merged crates
once_cell = "1.21"                                      # for vietnamese/hotkey
global-hotkey = "0.6"                                     # for hotkey
keyboard-types = "0.7"                                  # for hotkey

[dev-dependencies]
criterion = "0.5"

[lib]
name = "buttre_core"
path = "src/lib.rs"
