[package]
name = "buttre-engine"
version = "0.7.6-beta"
edition = "2021"
description = "Universal Vietnamese input engine with 7-stage pipeline"
license = "GPL-3.0-only"
authors = ["Buttre Contributors"]
# Internal workspace crate — never published to crates.io. Also lets
# cargo-deny's [licenses.private] exempt this GPL-3.0-only crate from the
# third-party license allow-list check (see root deny.toml).
publish = false

[lints]
workspace = true

[features]
default = ["optimized-transform", "optimized-tone", "vseqlist-tone"]
optimized-transform = []  # Use match instead of HashMap (200x faster)
optimized-tone = []  # Use static table instead of match for tone application
vseqlist-tone = []  # Use Unikey's VSeqList for 100% accurate tone positioning

[dependencies]
unicode-normalization = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rusqlite = { version = "0.30", features = ["bundled"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
# NOTE: the cross-engine comparator lives in tools/bench-compare (standalone,
# outside the workspace) because it depends on the local-only, gitignored
# `.reference/gonhanh` checkout — a path dev-dependency here broke
# `cargo metadata` for the whole workspace on CI.
serde = { workspace = true }
serde_json = { workspace = true }

[lib]
name = "buttre_engine"
path = "src/lib.rs"

[[bench]]
name = "compose_bench"
harness = false

[[bench]]
name = "end_to_end_vni"
harness = false

[[bench]]
name = "hashmap_vs_match"
harness = false
