[package]
name = "buttre-test"
version = "0.7.6-beta"
edition = "2021"
description = "Unified testing and benchmarking tool for Buttre"
# Internal workspace crate — never published to crates.io.
publish = false

[lints]
workspace = true

[dependencies]
# Common
anyhow = "1.0"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging (Combine legacy log and new tracing)
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Buttre Crates
buttre-core = { path = "../buttre-core" }
buttre-platform = { path = "../buttre-platform" }


# Integration Helper
ctrlc = "3.4"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
] }
